src/main/webapp/css/tdar-bootstrap.css
/* ... */
.small {
	font-size: 70%;
}

.rotate--90 {
	-webkit-transform: rotate(-90deg);
	transform: rotate(-90deg);
	-moz-transform: rotate(-90deg);
	-ms-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2 );
}

.rotate-90 {
	-webkit-transform: rotate(90deg);
	transform: rotate(90deg);
	-moz-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	-o-transform: rotate(90deg);
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=4 );
}

.adminbox {
	left: -25px;
	background: lightBlue;
	margin: 0px;
	padding: 2px 15px 2px 15px;
	font-weight: 700;
}

.resizable.resize-vertical {
	resize: vertical;
}


/* counter-acting ff's rendering of right-aligned elements in labels */
select.searchType {
	text-align: left !important;
}

.sort+.dbl {
	margin-top: 2px !important;
}

.icon-document {
	background: url(/images/r4/resource-types-large.gif) -296px -2477px
		no-repeat;
	width: 14px;
	height: 15px;
	display: inline-block;
}

.icon-dataset {
	background: url(/images/r4/resource-types-large.gif) -344px -2477px
		no-repeat;
	width: 14px;
	height: 14px;
	display: inline-block;
}

.icon-image {
	background: url(/images/r4/resource-types-large.gif) -326px -2477px
		no-repeat;
	width: 14px;
	height: 14px;
	display: inline-block;
}

.icon-codingsheet {
	background: url(/images/r4/resource-types-large.gif) -361px -2475px
		no-repeat;
	width: 14px;
	margin-top: -1px;
	height: 14px;
	display: inline-block;
}

.icon-project {
	background: url(/images/r4/resource-types-large.gif) -398px -2474px
		no-repeat;
	width: 14px;
	height: 16px;
	margin-top: -1px;
	display: inline-block;
}

.icon-collection {
	background: url(/images/r4/resource-types-large.gif) -447px -2477px
		no-repeat;
	width: 14px;
	height: 14px;
	display: inline-block;
}

.icon-geospatial {
	background: url(/images/r4/resource-types-large.gif) -431px -2477px
		no-repeat;
	width: 14px;
	height: 14px;
	display: inline-block;
}

.icon-sensorydata {
	background: url(/images/r4/resource-types-large.gif) -462px -2473px
		no-repeat;
	width: 14px;
	height: 14px;
	margin-top: -2px;
	display: inline-block;
}

.icon-ontology {
	background: url(/images/r4/resource-types-large.gif) -378px -2477px
		no-repeat;
	width: 14px;
	height: 14px;
	display: inline-block;
}

.icon-video {
	background: url(/images/r4/resource-types-large.gif) -415px -2472px
		no-repeat;
	width: 14px;
	height: 14px;
	display: inline-block;
}

.piechart {
	padding-top: 10px;
	padding-bottom: 10px;
}

.silhouette {
	width: 40px;
	padding-right: 6px;
}

p.copyright-notice {
	margin-top: 1em;
}

.barGraph {
	position: relative;
}

.nowrap {
	white-space: nowrap;
}

.popover h3,.popover h2 {
	margin-top: 0px !important;
	paddding: 10px 0px 10px 0px !important;
}

/* ensure proper spacing in view page metadata name/value pairs, and don't wrap in the middle */
.cols p.meta span.name-value {
	margin-right: 0.5em;
	diaplay: inline-block;
}

.tdar-gmap-control button:disabled {
	display: none;
}

/* bootstrap removes the input margin-bottom for horizontal forms (because control-group has a margn).  This messes up our datatable widget, so we put the margin
    back in */
.tdar-widget  input,.tdar-widget select,.tdar-widget textarea {
	margin-bottom: 10px;
}

.tdar-widget label {
	font-weight: bold;
}

/* ie8 hacks:begin */
/* we disable responsive-layout in ie8, but we want to retain the following rules */
.lt-ie9 .hidden {
	display: none;
	visibility: hidden;
}

.lt-ie9 .visible-phone,.lt-ie9 .visible-table,.lt-ie9 .hidden-desktop {
	display: none !important;
}

.lt-ie9 .visible-desktop {
	display: inherit !important;
}

/*FIXME: temp hack for TDAR-2634, remove when resolved */
.lt-ie9 .span9 .form-horizontal fieldset {
	width: 750px; /* normally 700px */
}

/*FIXME: temp hack for TDAR-2634, remove when resolved */
.lt-ie9 .span9 .form-horizontal fieldset .input-xxlarge {
	width: 500px; /* normally 530px */
}

/* .fade, fade.in transitions not supported in ie8 */
.lt-ie9 .fade {
	visibility: hidden;
}

.lt-ie9 .fade.in {
	visibility: inherit !important;
}

/* ie8 hacks: end */
.view-deleted-file {
	background-color: #EDD87B;
	text-decoration: line-through;
	display: none;
}

.view-hidden-extra-files {
	display:none;
}

/* contextual help styling - based off of 'downloads' box on view page */
#notice {
	font-family: 'ff-tisa-web-pro', serif;
	background-color: #f0eeeb;
	z-index:-1;
}

#notice h2 {
	font-size: 15px;
}

#notice>h2 {
	background-color: #DEDEDE;
	padding: 10px;
	line-height: inherit;
	border-bottom: 1px solid #EEE;
}

#noticecontent {
	color: #7d7a77;
	padding: 0 10px 5px 10px;
}

/* undoing .cols p */
#noticecontent p {
	font-size: inherit;
	font-weight: normal;
}

.link {
	color: #4265A7;
	font-weight: bold;
}

.link:hover {
	cursor: pointer;
	color: #993333;
}

.atlwdg-trigger.atlwdg-TOP {
	z-index: 99999999 !important;
}


.pull-quote {
	font-size: 20px;
	line-height: 40px;
	color: #999;
}

/*use in column-sized div to scale image if width exceeds parent width */
img.responsive-image {
    max-width: 100%;
    height: auto;    
}

#downloadsMoreArea {
	background-color: #ddd;
	padding-left: 35px;
}

.hidden-phone-portrait {
	display:inherit;
	visibility:inherit;	
}
.responsive-phone-portrait .hidden-phone-portrait {
	display:none !important;
	visibility:hidden !Important;	
}


.highlightrow-yellow td {
	background: lightgoldenrodyellow !important;
}

.highlightrow-green td {
	background: honeydew !important;
}

.highlightrow-blue td {
	background: lightblue !important;
}

/* fancy double-border for top of search results. */
div.tdarresults {
    border-top:double #222;
    border-bottom: double #222;
    padding-bottom: 3em;
    margin-bottom: 0.1em;
}

/* first row of grid results should have margin similar to rows that follow an HR */
div.tdarresults .row.GRID:first-child div.listItem {
    margin-top: 24px;
}
/* ... */

